--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -67,4 +67,44 @@
 	</LinearLayout>
 </ScrollView>
 
+ <SlidingDrawer
+     android:id="@+id/drawer"
+     android:layout_width="fill_parent"
+     android:layout_height="fill_parent"
+
+     android:handle="@+id/handle"
+     android:content="@+id/content"
+     >
+
+     <TextView
+         android:id="@id/handle"
+         android:layout_width="fill_parent"
+         android:layout_height="40dip" 
+         android:text="Incoming links"
+         android:textAppearance="?android:attr/textAppearanceMedium"
+         android:background="#ccc"
+         android:gravity="center"
+         />
+
+
+	 <LinearLayout
+		 android:id="@id/content"
+         android:layout_width="fill_parent"
+         android:layout_height="fill_parent"
+         android:background="#fff"
+         >
+         
+     	<ListView
+        	android:id="@+id/content_lv"
+         	android:layout_width="fill_parent"
+         	android:layout_height="fill_parent"
+         	>
+        </ListView>
+<!--        <TextView -->
+<!--        	android:id="@id/android:empty" android:layout_width="fill_parent"-->
+<!--			android:layout_height="fill_parent" android:text="No Results"     />-->
+         	
+	</LinearLayout>
+ </SlidingDrawer>
+
 </RelativeLayout>
